--- a/download/client/res/common/poker.plist
+++ b/download/client/res/common/poker.plist
@@ -7,7 +7,18 @@
 			<key>0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{1,1},{151,180}}</string>
+				<string>{{2,2},{151,180}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<true />
+				<key>sourceSize</key>
+				<string>{151,180}</string>
+			</dict>
+			<key>0_0.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{186,2},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -18,7 +29,7 @@
 			<key>1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{183,1},{151,180}}</string>
+				<string>{{370,2},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -29,7 +40,7 @@
 			<key>10.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{365,1},{151,180}}</string>
+				<string>{{554,2},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -40,7 +51,7 @@
 			<key>11.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{547,1},{151,180}}</string>
+				<string>{{738,2},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -51,7 +62,7 @@
 			<key>12.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{729,1},{151,180}}</string>
+				<string>{{2,157},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -62,7 +73,7 @@
 			<key>13.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{1,154},{151,180}}</string>
+				<string>{{186,157},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -73,7 +84,7 @@
 			<key>17.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{183,154},{151,180}}</string>
+				<string>{{370,157},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -84,7 +95,7 @@
 			<key>18.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{365,154},{151,180}}</string>
+				<string>{{554,157},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -95,7 +106,7 @@
 			<key>19.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{547,154},{151,180}}</string>
+				<string>{{738,157},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -106,7 +117,7 @@
 			<key>2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{729,154},{151,180}}</string>
+				<string>{{2,312},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -117,7 +128,7 @@
 			<key>20.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{1,307},{151,180}}</string>
+				<string>{{186,312},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -128,7 +139,7 @@
 			<key>21.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{183,307},{151,180}}</string>
+				<string>{{370,312},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -139,7 +150,7 @@
 			<key>22.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{365,307},{151,180}}</string>
+				<string>{{554,312},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -150,7 +161,7 @@
 			<key>23.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{547,307},{151,180}}</string>
+				<string>{{738,312},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -161,7 +172,7 @@
 			<key>24.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{729,307},{151,180}}</string>
+				<string>{{2,467},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -172,7 +183,7 @@
 			<key>25.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{1,460},{151,180}}</string>
+				<string>{{186,467},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -183,7 +194,7 @@
 			<key>26.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{183,460},{151,180}}</string>
+				<string>{{370,467},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -194,7 +205,7 @@
 			<key>27.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{365,460},{151,180}}</string>
+				<string>{{554,467},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -205,7 +216,7 @@
 			<key>28.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{547,460},{151,180}}</string>
+				<string>{{738,467},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -216,7 +227,7 @@
 			<key>29.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{729,460},{151,180}}</string>
+				<string>{{2,622},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -227,7 +238,7 @@
 			<key>3.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{1,613},{151,180}}</string>
+				<string>{{186,622},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -238,7 +249,7 @@
 			<key>33.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{183,613},{151,180}}</string>
+				<string>{{370,622},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -249,7 +260,7 @@
 			<key>34.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{365,613},{151,180}}</string>
+				<string>{{554,622},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -260,7 +271,7 @@
 			<key>35.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{547,613},{151,180}}</string>
+				<string>{{738,622},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -271,7 +282,7 @@
 			<key>36.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{729,613},{151,180}}</string>
+				<string>{{2,777},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -282,7 +293,7 @@
 			<key>37.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{1,766},{151,180}}</string>
+				<string>{{186,777},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -293,7 +304,7 @@
 			<key>38.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{183,766},{151,180}}</string>
+				<string>{{370,777},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -304,7 +315,7 @@
 			<key>39.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{365,766},{151,180}}</string>
+				<string>{{554,777},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -315,7 +326,7 @@
 			<key>4.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{547,766},{151,180}}</string>
+				<string>{{738,777},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -326,7 +337,7 @@
 			<key>40.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{729,766},{151,180}}</string>
+				<string>{{2,932},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -337,7 +348,7 @@
 			<key>41.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{1,919},{151,180}}</string>
+				<string>{{186,932},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -348,7 +359,7 @@
 			<key>42.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{183,919},{151,180}}</string>
+				<string>{{370,932},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -359,7 +370,7 @@
 			<key>43.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{365,919},{151,180}}</string>
+				<string>{{554,932},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -370,7 +381,7 @@
 			<key>44.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{547,919},{151,180}}</string>
+				<string>{{738,932},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -381,18 +392,18 @@
 			<key>45.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{729,919},{151,180}}</string>
+				<string>{{2,1087},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
-				<true />
+				<false />
 				<key>sourceSize</key>
 				<string>{151,180}</string>
 			</dict>
 			<key>49.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{1,1072},{151,180}}</string>
+				<string>{{2,1271},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -403,7 +414,7 @@
 			<key>5.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{1,1254},{151,180}}</string>
+				<string>{{2,1455},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -414,7 +425,7 @@
 			<key>50.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{1,1436},{151,180}}</string>
+				<string>{{2,1639},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -425,7 +436,7 @@
 			<key>51.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{1,1618},{151,180}}</string>
+				<string>{{2,1823},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -436,18 +447,18 @@
 			<key>52.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{1,1800},{151,180}}</string>
+				<string>{{157,1087},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
-				<false />
+				<true />
 				<key>sourceSize</key>
 				<string>{151,180}</string>
 			</dict>
 			<key>53.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{154,1072},{151,180}}</string>
+				<string>{{341,1087},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -458,7 +469,7 @@
 			<key>54.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{336,1072},{151,180}}</string>
+				<string>{{525,1087},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -469,7 +480,7 @@
 			<key>55.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{518,1072},{151,180}}</string>
+				<string>{{709,1087},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -480,18 +491,18 @@
 			<key>56.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{700,1072},{151,180}}</string>
+				<string>{{157,1242},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
-				<true />
+				<false />
 				<key>sourceSize</key>
 				<string>{151,180}</string>
 			</dict>
 			<key>57.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{154,1225},{151,180}}</string>
+				<string>{{157,1426},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -502,7 +513,7 @@
 			<key>58.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{154,1407},{151,180}}</string>
+				<string>{{157,1610},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -513,7 +524,7 @@
 			<key>59.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{154,1589},{151,180}}</string>
+				<string>{{157,1794},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -524,18 +535,18 @@
 			<key>6.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{154,1771},{151,180}}</string>
+				<string>{{312,1242},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
-				<false />
+				<true />
 				<key>sourceSize</key>
 				<string>{151,180}</string>
 			</dict>
 			<key>60.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{307,1225},{151,180}}</string>
+				<string>{{496,1242},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -546,7 +557,7 @@
 			<key>61.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{489,1225},{151,180}}</string>
+				<string>{{680,1242},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -557,18 +568,7 @@
 			<key>7.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{671,1225},{151,180}}</string>
-				<key>offset</key>
-				<string>{0,0}</string>
-				<key>rotated</key>
-				<true />
-				<key>sourceSize</key>
-				<string>{151,180}</string>
-			</dict>
-			<key>78.png</key>
-			<dict>
-				<key>frame</key>
-				<string>{{853,1225},{151,180}}</string>
+				<string>{{864,1242},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -576,10 +576,21 @@
 				<key>sourceSize</key>
 				<string>{151,180}</string>
 			</dict>
+			<key>78.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{312,1397},{151,180}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<true />
+				<key>sourceSize</key>
+				<string>{151,180}</string>
+			</dict>
 			<key>79.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{307,1378},{151,180}}</string>
+				<string>{{496,1397},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -590,7 +601,7 @@
 			<key>8.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{489,1378},{151,180}}</string>
+				<string>{{680,1397},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -601,11 +612,11 @@
 			<key>9.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{671,1378},{151,180}}</string>
+				<string>{{864,1426},{151,180}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
-				<true />
+				<false />
 				<key>sourceSize</key>
 				<string>{151,180}</string>
 			</dict>
